[package]
name = "dispute-game-arbiter"
version = "0.1.0"
authors = ["clabby"]
edition = "2021"
license = "MIT"
resolver = "2"

[dependencies]
durin-primitives = { git = "https://github.com/anton-rs/durin", branch = "cl/updates" }
durin-fault = { git = "https://github.com/anton-rs/durin", branch = "cl/updates" }
arbiter-core = { git = "https://github.com/primitivefinance/arbiter" }
arbiter-engine = { git = "https://github.com/primitivefinance/arbiter" }
revm = { git = "https://github.com/bluealloy/revm.git", rev = "30bbcdf" }
ethers = "2.0.11"

tokio = { version = "1.35.1", features = ["macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.79"
async-trait = "0.1.77"
